# leica-browser-qt

./: .gitignore  README.md  plan_leica_browser_qt.md  publish.cmd  pyproject.toml  run_viewer.cmd
examples/: cideconvolve_open_leica.py  minimal_multi_select.py  minimal_single_select.py
src/leica_browser_qt/: __init__.py  api.py  cli.py  leica_browser_dialog.py  leica_gateway.py  leica_image_loader.py  leica_pixels.py  leica_tree_model.py  leica_viewer.py  metadata.py  models.py  preview.py
src/leica_browser_qt/_convertleica_backend/: CreatePreview.py  ParseLeicaImageXML.py  ParseLeicaImageXMLLite.py  ReadLeicaLIF.py  ReadLeicaLOF.py  ReadLeicaXLEF.py  __init__.py  helpers.py
tests/: test_leica_viewer.py  test_models.py  test_pixels.py  test_public_api.py  test_scan_paths.py  test_selection_modes.py
