[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leica-browser-qt"
version = "0.3.1"
description = "Reusable PyQt6 browser dialog for Leica LIF, XLEF, and LOF image containers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "NL-BioImaging contributors" },
]
keywords = ["leica", "lif", "xlef", "lof", "pyqt6", "microscopy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "PyQt6",
  "numpy",
  "opencv-python",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "build"]

[project.scripts]
leica_browser = "leica_browser_qt.cli:main"
leica_viewer = "leica_browser_qt.leica_viewer:main"

[tool.hatch.build]
include = [
  "src/leica_browser_qt/**",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/leica_browser_qt"]

[tool.ruff]
line-length = 100
target-version = "py310"
